initial version in vite

--- a/client/index.html
+++ b/client/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Alex Chen - Full Stack Developer Portfolio</title>
+    <title>Vikas Kumar - Full Stack Developer Portfolio</title>
     <meta name="description" content="Full Stack Developer & Next.js Expert. I create modern, scalable web applications using Next.js, React, and cutting-edge technologies." />
     
     <!-- Open Graph tags -->
-    <meta property="og:title" content="Alex Chen - Full Stack Developer Portfolio" />
+    <meta property="og:title" content="Vikas Kumar - Full Stack Developer Portfolio" />
     <meta property="og:description" content="Full Stack Developer & Next.js Expert specializing in modern web applications" />
     <meta property="og:type" content="website" />
     
